[package]
name = "rustfolio"
version = "0.1.0"
authors = ["Sergey Pikhota <sergey@pikhota.com>"]
description = "A simple tool for monitoring an investment portfolio"
repository = "https://github.com/Melesar/rustfolio"
keywords = ["portfolio"]
categories = ["command-line-utilities", "visualization"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
piechart = { git = "https://github.com/Melesar/piechart", version = "1.0.0" }
xdg = "2.0"
args = "2.0"
getopts = "0.2.21"
csv = "1.1"
crossterm = "0.19.0"
