[package]
name = "rustfolio"
version = "1.0.0"
authors = ["Sergey Pikhota <sergey@pikhota.com>"]
description = "A simple tool for monitoring an investment portfolio"
repository = "https://github.com/Melesar/rustfolio"
keywords = ["portfolio"]
categories = ["command-line-utilities", "visualization"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
piechart = "1.0.0"
xdg = "2.0"
csv = "1.1"
crossterm = "0.19.0"
chrono = "0.4"
clap = "2.34"
cli-table = "0.4"
